Fix board alignment

--- a/styles.scss
+++ b/styles.scss
@@ -22,7 +22,7 @@ body {
 
 .game-board {
     width: 300px;
-    height: 800px;
+    height: 100vh;
     position: relative;
     perspective: 3000px;
     perspective-origin: center 100vh;
@@ -66,6 +66,7 @@ body {
         margin-left: 0;
         height: 100vh;
         min-height: 570px;
+        height: 800px;
     } 
 }
 
@@ -178,7 +179,11 @@ body {
 
 .rotate-right {
     left: 50%;
-    transform: translateX(calc(20vh - 50%)) scaleX(-1);
+    transform: translateX(calc(175px - 50%)) scaleX(-1);
+
+    @media screen and (max-width: 799px) {
+        transform: translateX(calc(20vh - 50%)) scaleX(-1);
+    } 
 }
 
 .start {
